# tokenizers.cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  LICENSE  README.md
.github/workflows/: icu.yml  main.yml
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/xyz/omkar/tokenizers/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/tokenizers.cpp_android/: settings.gradle.kts
android/tokenizers.cpp_android/app/: build.gradle.kts
android/tokenizers.cpp_android/app/src/main/: AndroidManifest.xml
android/tokenizers.cpp_android/app/src/main/cpp/: CMakeLists.txt  tokenizers.cpp_jni.cpp
android/tokenizers.cpp_android/app/src/main/java/xyz/omkar/tokenizers/cpp/: MainActivity.kt  Tokenizer.java
android/tokenizers.cpp_android/app/src/main/res/layout/: activity_main.xml
android/tokenizers.cpp_android/app/src/main/res/values/: strings.xml  themes.xml
android/tokenizers.cpp_android/app/src/main/res/values-night/: themes.xml
android/tokenizers.cpp_android/gradle/wrapper/: gradle-wrapper.properties
android/tokenizers_android/: build.gradle.kts
android/tokenizers_android/src/androidTest/java/xyz/omkar/tokenizers/: TokenizerInstrumentedTest.kt
android/tokenizers_android/src/main/: AndroidManifest.xml
android/tokenizers_android/src/main/cpp/: CMakeLists.txt  tokenizers_android_jni.cpp
android/tokenizers_android/src/main/java/xyz/omkar/tokenizers/: Tokenizer.java
android/tokenizers_android/src/main/res/values/: strings.xml  themes.xml
android/tokenizers_android/src/main/res/values-night/: themes.xml
docs/: README.md
examples/: CMakeLists.txt  README.md  bert-base-uncased  bert-base-uncased.cpp  llama-tokenizer.cpp  run.cpp  sample.cpp
examples/libtorch-bert/: CMakeLists.txt  bert-base-uncased.cpp  generate_torchscript.py  mobilebert-uncased.cpp  requirements.txt
examples/run/: CMakeLists.txt
include/tokenizers/: added_vocabulary.h  common.h  decoder.h  model.h  normalizer.h  post_processor.h  pre_tokenizer.h  tokenizer.h  utils.h
include/tokenizers.cpp/: added_vocabulary.h  common.h  decoder.h  model.h  normalizer.h  post_processor.h  pre_tokenizer.h  tokenizer.h  utils.h
ios/: README.md
ios/tokenizers/Tokenizers/: Tokenizer.swift
ios/tokenizers/tokenizers.xcodeproj/: project.pbxproj
ios/tokenizers/tokenizers.xcodeproj/project.xcworkspace/xcuserdata/omkar.xcuserdatad/: UserInterfaceState.xcuserstate
ios/tokenizers/tokenizers.xcodeproj/xcuserdata/omkar.xcuserdatad/xcschemes/: xcschememanagement.plist
scripts/: generate_tokenizer_files.py
scripts/compare_outputs/: run.py  run.sh
scripts/icu/: .gitignore  build.sh
scripts/icu4c/: .gitignore  CMakeLists.txt  build-icu4c.sh
scripts/icu4c/src/: CMakeLists.txt
scripts/icu4c/src/CMakeModules/: EnforceSystemEnv.cmake
scripts/icu4c/src/patches/: uconfig_h.patch
src/: added_vocabulary.cpp  common.cpp  decoder.cpp  model.cpp  model_test.cpp  normalizer.cpp  normalizer_test.cpp  post_processor.cpp  pre_tokenizer.cpp  pre_tokenizer_test.cpp  tokenizer.cpp  utils.cpp
tests/: CMakeLists.txt  added_vocabulary.cpp  common.cpp  decoder.cpp  model.cpp  normalizer.cpp  post_processor.cpp  pre_tokenizer.cpp  tokenizer.cpp  utils.cpp
